tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__DontPlayWithYour-AAAAAAAAAAAAAAAAAAAAfA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 124,
  "prerequisites": [
    122
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Use it to kill zombies instead. Does only a little damage, but hey, who cares?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lDon't Play With Your Food!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    122
  ],
  "rewards": [],
  "tasks": []
}
