tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__FancyArmor-AAAAAAAAAAAAAAAAAAACsg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 690,
  "prerequisites": [
    65,
    685
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Not really better but fancier. The chain mail armor is made out of steel rings.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 1,
    "name": "Fancy Armor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65,
    685
  ],
  "rewards": [],
  "tasks": []
}
