tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__Goggles9000-AAAAAAAAAAAAAAAAAAAFSA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1352,
  "prerequisites": [
    1351,
    1336
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This special pair of goggles recharges itself while you wander in sunlight. How convenient.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Goggles > 9000",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1351,
    1336
  ],
  "rewards": [],
  "tasks": []
}
