tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__IridiumPlated-AAAAAAAAAAAAAAAAAAADIg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 802,
  "prerequisites": [
    800,
    801,
    654,
    799
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Plating all your armor parts with iridium alloy casings gives them a better durability. Before you can wear these quantum armor parts you need to activate them with some quantum crystals.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Iridium Plated",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    800,
    801,
    654,
    799
  ],
  "rewards": [],
  "tasks": []
}
