tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__IronSpear-AAAAAAAAAAAAAAAAAAACkg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 658,
  "prerequisites": [
    65
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Upgrade your wooden spear with an iron arrowhead and two steel screws to an iron spear.\n\nThe iron spear has better durability than the stone variant.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lIron Spear",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65
  ],
  "rewards": [],
  "tasks": []
}
